--- a/index.html
+++ b/index.html
@@ -166,6 +166,48 @@
               <div class="team-box">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-position">Product Designer</p>
+
+                <a
+                  class="team-soc-link"
+                  href=""
+                  aria-label="insta"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                >
+                  <svg class="team-soc-icon" width="40" height="40">
+                    <use href="./images/symbol-defs.svg#icon-Insta"></use>
+                  </svg>
+                </a>
+
+                <a
+                  class="team-soc-link"
+                  href=""
+                  aria-label="twitter"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                  ><svg class="team-soc-icon" width="40" height="40">
+                    <use href="./images/symbol-defs.svg#icon-tweet"></use></svg
+                ></a>
+
+                <a
+                  class="team-soc-link"
+                  href=""
+                  aria-label="facebook"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                  ><svg class="team-soc-icon" width="40" height="40">
+                    <use href="./images/symbol-defs.svg#icon-faceb"></use></svg
+                ></a>
+
+                <a
+                  class="team-soc-link"
+                  href=""
+                  aria-label="in"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                  ><svg class="team-soc-icon" width="40" height="40">
+                    <use href="./images/symbol-defs.svg#icon-link"></use></svg
+                ></a>
               </div>
             </li>
             <li class="team-item">
@@ -178,6 +220,48 @@
               <div class="team-box">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-position">Frontend Developer</p>
+
+                <a
+                  class="team-soc-link"
+                  href=""
+                  aria-label="insta"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                >
+                  <svg class="team-soc-icon" width="40" height="40">
+                    <use href="./images/symbol-defs.svg#icon-Insta"></use>
+                  </svg>
+                </a>
+
+                <a
+                  class="team-soc-link"
+                  href=""
+                  aria-label="twitter"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                  ><svg class="team-soc-icon" width="40" height="40">
+                    <use href="./images/symbol-defs.svg#icon-tweet"></use></svg
+                ></a>
+
+                <a
+                  class="team-soc-link"
+                  href=""
+                  aria-label="facebook"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                  ><svg class="team-soc-icon" width="40" height="40">
+                    <use href="./images/symbol-defs.svg#icon-faceb"></use></svg
+                ></a>
+
+                <a
+                  class="team-soc-link"
+                  href=""
+                  aria-label="in"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                  ><svg class="team-soc-icon" width="40" height="40">
+                    <use href="./images/symbol-defs.svg#icon-link"></use></svg
+                ></a>
               </div>
             </li>
             <li class="team-item">
@@ -190,6 +274,48 @@
               <div class="team-box">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-position">Marketing</p>
+
+                <a
+                  class="team-soc-link"
+                  href=""
+                  aria-label="insta"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                >
+                  <svg class="team-soc-icon" width="40" height="40">
+                    <use href="./images/symbol-defs.svg#icon-Insta"></use>
+                  </svg>
+                </a>
+
+                <a
+                  class="team-soc-link"
+                  href=""
+                  aria-label="twitter"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                  ><svg class="team-soc-icon" width="40" height="40">
+                    <use href="./images/symbol-defs.svg#icon-tweet"></use></svg
+                ></a>
+
+                <a
+                  class="team-soc-link"
+                  href=""
+                  aria-label="facebook"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                  ><svg class="team-soc-icon" width="40" height="40">
+                    <use href="./images/symbol-defs.svg#icon-faceb"></use></svg
+                ></a>
+
+                <a
+                  class="team-soc-link"
+                  href=""
+                  aria-label="in"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                  ><svg class="team-soc-icon" width="40" height="40">
+                    <use href="./images/symbol-defs.svg#icon-link"></use></svg
+                ></a>
               </div>
             </li>
             <li class="team-item">
@@ -202,6 +328,48 @@
               <div class="team-box">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-position">UI Designer</p>
+
+                <a
+                  class="team-soc-link"
+                  href=""
+                  aria-label="insta"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                >
+                  <svg class="team-soc-icon" width="40" height="40">
+                    <use href="./images/symbol-defs.svg#icon-Insta"></use>
+                  </svg>
+                </a>
+
+                <a
+                  class="team-soc-link"
+                  href=""
+                  aria-label="twitter"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                  ><svg class="team-soc-icon" width="40" height="40">
+                    <use href="./images/symbol-defs.svg#icon-tweet"></use></svg
+                ></a>
+
+                <a
+                  class="team-soc-link"
+                  href=""
+                  aria-label="facebook"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                  ><svg class="team-soc-icon" width="40" height="40">
+                    <use href="./images/symbol-defs.svg#icon-faceb"></use></svg
+                ></a>
+
+                <a
+                  class="team-soc-link"
+                  href=""
+                  aria-label="in"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                  ><svg class="team-soc-icon" width="40" height="40">
+                    <use href="./images/symbol-defs.svg#icon-link"></use></svg
+                ></a>
               </div>
             </li>
           </ul>
