--- a/index.html
+++ b/index.html
@@ -166,48 +166,63 @@
               <div class="team-box">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-position">Product Designer</p>
+                <ul class="ul-team-soc">
+                  <li class="li-team-box">
+                    <a
+                      class="team-soc-link"
+                      href=""
+                      aria-label="insta"
+                      target="_blank"
+                      rel="noopener no-referrer"
+                    >
+                      <svg class="team-soc-icon" width="40" height="40">
+                        <use href="./images/symbol-defs.svg#icon-Insta"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <a
-                  class="team-soc-link"
-                  href=""
-                  aria-label="insta"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                >
-                  <svg class="team-soc-icon" width="40" height="40">
-                    <use href="./images/symbol-defs.svg#icon-Insta"></use>
-                  </svg>
-                </a>
+                  <li class="li-team-box">
+                    <a
+                      class="team-soc-link"
+                      href=""
+                      aria-label="twitter"
+                      target="_blank"
+                      rel="noopener no-referrer"
+                      ><svg class="team-soc-icon" width="40" height="40">
+                        <use
+                          href="./images/symbol-defs.svg#icon-tweet"
+                        ></use></svg
+                    ></a>
+                  </li>
 
-                <a
-                  class="team-soc-link"
-                  href=""
-                  aria-label="twitter"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                  ><svg class="team-soc-icon" width="40" height="40">
-                    <use href="./images/symbol-defs.svg#icon-tweet"></use></svg
-                ></a>
+                  <li class="li-team-box">
+                    <a
+                      class="team-soc-link"
+                      href=""
+                      aria-label="facebook"
+                      target="_blank"
+                      rel="noopener no-referrer"
+                      ><svg class="team-soc-icon" width="40" height="40">
+                        <use
+                          href="./images/symbol-defs.svg#icon-faceb"
+                        ></use></svg
+                    ></a>
+                  </li>
 
-                <a
-                  class="team-soc-link"
-                  href=""
-                  aria-label="facebook"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                  ><svg class="team-soc-icon" width="40" height="40">
-                    <use href="./images/symbol-defs.svg#icon-faceb"></use></svg
-                ></a>
-
-                <a
-                  class="team-soc-link"
-                  href=""
-                  aria-label="in"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                  ><svg class="team-soc-icon" width="40" height="40">
-                    <use href="./images/symbol-defs.svg#icon-link"></use></svg
-                ></a>
+                  <li class="li-team-box">
+                    <a
+                      class="team-soc-link"
+                      href=""
+                      aria-label="in"
+                      target="_blank"
+                      rel="noopener no-referrer"
+                      ><svg class="team-soc-icon" width="40" height="40">
+                        <use
+                          href="./images/symbol-defs.svg#icon-link"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -221,47 +236,63 @@
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-position">Frontend Developer</p>
 
-                <a
-                  class="team-soc-link"
-                  href=""
-                  aria-label="insta"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                >
-                  <svg class="team-soc-icon" width="40" height="40">
-                    <use href="./images/symbol-defs.svg#icon-Insta"></use>
-                  </svg>
-                </a>
+                <ul class="ul-team-soc">
+                  <li class="li-team-box">
+                    <a
+                      class="team-soc-link"
+                      href=""
+                      aria-label="insta"
+                      target="_blank"
+                      rel="noopener no-referrer"
+                    >
+                      <svg class="team-soc-icon" width="40" height="40">
+                        <use href="./images/symbol-defs.svg#icon-Insta"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <a
-                  class="team-soc-link"
-                  href=""
-                  aria-label="twitter"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                  ><svg class="team-soc-icon" width="40" height="40">
-                    <use href="./images/symbol-defs.svg#icon-tweet"></use></svg
-                ></a>
+                  <li class="li-team-box">
+                    <a
+                      class="team-soc-link"
+                      href=""
+                      aria-label="twitter"
+                      target="_blank"
+                      rel="noopener no-referrer"
+                      ><svg class="team-soc-icon" width="40" height="40">
+                        <use
+                          href="./images/symbol-defs.svg#icon-tweet"
+                        ></use></svg
+                    ></a>
+                  </li>
 
-                <a
-                  class="team-soc-link"
-                  href=""
-                  aria-label="facebook"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                  ><svg class="team-soc-icon" width="40" height="40">
-                    <use href="./images/symbol-defs.svg#icon-faceb"></use></svg
-                ></a>
+                  <li class="li-team-box">
+                    <a
+                      class="team-soc-link"
+                      href=""
+                      aria-label="facebook"
+                      target="_blank"
+                      rel="noopener no-referrer"
+                      ><svg class="team-soc-icon" width="40" height="40">
+                        <use
+                          href="./images/symbol-defs.svg#icon-faceb"
+                        ></use></svg
+                    ></a>
+                  </li>
 
-                <a
-                  class="team-soc-link"
-                  href=""
-                  aria-label="in"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                  ><svg class="team-soc-icon" width="40" height="40">
-                    <use href="./images/symbol-defs.svg#icon-link"></use></svg
-                ></a>
+                  <li class="li-team-box">
+                    <a
+                      class="team-soc-link"
+                      href=""
+                      aria-label="in"
+                      target="_blank"
+                      rel="noopener no-referrer"
+                      ><svg class="team-soc-icon" width="40" height="40">
+                        <use
+                          href="./images/symbol-defs.svg#icon-link"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -275,47 +306,63 @@
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-position">Marketing</p>
 
-                <a
-                  class="team-soc-link"
-                  href=""
-                  aria-label="insta"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                >
-                  <svg class="team-soc-icon" width="40" height="40">
-                    <use href="./images/symbol-defs.svg#icon-Insta"></use>
-                  </svg>
-                </a>
+                <ul class="ul-team-soc">
+                  <li class="li-team-box">
+                    <a
+                      class="team-soc-link"
+                      href=""
+                      aria-label="insta"
+                      target="_blank"
+                      rel="noopener no-referrer"
+                    >
+                      <svg class="team-soc-icon" width="40" height="40">
+                        <use href="./images/symbol-defs.svg#icon-Insta"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <a
-                  class="team-soc-link"
-                  href=""
-                  aria-label="twitter"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                  ><svg class="team-soc-icon" width="40" height="40">
-                    <use href="./images/symbol-defs.svg#icon-tweet"></use></svg
-                ></a>
+                  <li class="li-team-box">
+                    <a
+                      class="team-soc-link"
+                      href=""
+                      aria-label="twitter"
+                      target="_blank"
+                      rel="noopener no-referrer"
+                      ><svg class="team-soc-icon" width="40" height="40">
+                        <use
+                          href="./images/symbol-defs.svg#icon-tweet"
+                        ></use></svg
+                    ></a>
+                  </li>
 
-                <a
-                  class="team-soc-link"
-                  href=""
-                  aria-label="facebook"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                  ><svg class="team-soc-icon" width="40" height="40">
-                    <use href="./images/symbol-defs.svg#icon-faceb"></use></svg
-                ></a>
+                  <li class="li-team-box">
+                    <a
+                      class="team-soc-link"
+                      href=""
+                      aria-label="facebook"
+                      target="_blank"
+                      rel="noopener no-referrer"
+                      ><svg class="team-soc-icon" width="40" height="40">
+                        <use
+                          href="./images/symbol-defs.svg#icon-faceb"
+                        ></use></svg
+                    ></a>
+                  </li>
 
-                <a
-                  class="team-soc-link"
-                  href=""
-                  aria-label="in"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                  ><svg class="team-soc-icon" width="40" height="40">
-                    <use href="./images/symbol-defs.svg#icon-link"></use></svg
-                ></a>
+                  <li class="li-team-box">
+                    <a
+                      class="team-soc-link"
+                      href=""
+                      aria-label="in"
+                      target="_blank"
+                      rel="noopener no-referrer"
+                      ><svg class="team-soc-icon" width="40" height="40">
+                        <use
+                          href="./images/symbol-defs.svg#icon-link"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -329,47 +376,63 @@
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-position">UI Designer</p>
 
-                <a
-                  class="team-soc-link"
-                  href=""
-                  aria-label="insta"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                >
-                  <svg class="team-soc-icon" width="40" height="40">
-                    <use href="./images/symbol-defs.svg#icon-Insta"></use>
-                  </svg>
-                </a>
+                <ul class="ul-team-soc">
+                  <li class="li-team-box">
+                    <a
+                      class="team-soc-link"
+                      href=""
+                      aria-label="insta"
+                      target="_blank"
+                      rel="noopener no-referrer"
+                    >
+                      <svg class="team-soc-icon" width="40" height="40">
+                        <use href="./images/symbol-defs.svg#icon-Insta"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <a
-                  class="team-soc-link"
-                  href=""
-                  aria-label="twitter"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                  ><svg class="team-soc-icon" width="40" height="40">
-                    <use href="./images/symbol-defs.svg#icon-tweet"></use></svg
-                ></a>
+                  <li class="li-team-box">
+                    <a
+                      class="team-soc-link"
+                      href=""
+                      aria-label="twitter"
+                      target="_blank"
+                      rel="noopener no-referrer"
+                      ><svg class="team-soc-icon" width="40" height="40">
+                        <use
+                          href="./images/symbol-defs.svg#icon-tweet"
+                        ></use></svg
+                    ></a>
+                  </li>
 
-                <a
-                  class="team-soc-link"
-                  href=""
-                  aria-label="facebook"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                  ><svg class="team-soc-icon" width="40" height="40">
-                    <use href="./images/symbol-defs.svg#icon-faceb"></use></svg
-                ></a>
+                  <li class="li-team-box">
+                    <a
+                      class="team-soc-link"
+                      href=""
+                      aria-label="facebook"
+                      target="_blank"
+                      rel="noopener no-referrer"
+                      ><svg class="team-soc-icon" width="40" height="40">
+                        <use
+                          href="./images/symbol-defs.svg#icon-faceb"
+                        ></use></svg
+                    ></a>
+                  </li>
 
-                <a
-                  class="team-soc-link"
-                  href=""
-                  aria-label="in"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                  ><svg class="team-soc-icon" width="40" height="40">
-                    <use href="./images/symbol-defs.svg#icon-link"></use></svg
-                ></a>
+                  <li class="li-team-box">
+                    <a
+                      class="team-soc-link"
+                      href=""
+                      aria-label="in"
+                      target="_blank"
+                      rel="noopener no-referrer"
+                      ><svg class="team-soc-icon" width="40" height="40">
+                        <use
+                          href="./images/symbol-defs.svg#icon-link"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -380,14 +443,71 @@
     <!--------------------------FOOTER------------------------->
 
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="header-logo link"
-          >Web<span class="footer-logo-web">Studio</span>
-        </a>
-        <p class="footer-page">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-first-block">
+          <a href="./index.html" class="header-logo link"
+            >Web<span class="footer-logo-web">Studio</span>
+          </a>
+          <p class="footer-page">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="footer-second-block">
+          <p class="footer-text">Social media</p>
+          <ul class="ul-footer-soc">
+            <li class="li-footer-box">
+              <a
+                class="footer-soc-link"
+                href=""
+                aria-label="insta"
+                target="_blank"
+                rel="noopener no-referrer"
+              >
+                <svg class="footer-soc-icon" width="40" height="40">
+                  <use href="./images/symbol-defs.svg#icon-Insta"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="li-footer-box">
+              <a
+                class="li-footer-box"
+                href=""
+                aria-label="twitter"
+                target="_blank"
+                rel="noopener no-referrer"
+                ><svg class="team-soc-icon" width="40" height="40">
+                  <use href="./images/symbol-defs.svg#icon-tweet"></use></svg
+              ></a>
+            </li>
+
+            <li class="li-footer-box">
+              <a
+                class="li-footer-box"
+                href=""
+                aria-label="facebook"
+                target="_blank"
+                rel="noopener no-referrer"
+                ><svg class="team-soc-icon" width="40" height="40">
+                  <use href="./images/symbol-defs.svg#icon-faceb"></use></svg
+              ></a>
+            </li>
+
+            <li class="li-footer-box">
+              <a
+                class="li-footer-box"
+                href=""
+                aria-label="in"
+                target="_blank"
+                rel="noopener no-referrer"
+                ><svg class="team-soc-icon" width="40" height="40">
+                  <use href="./images/symbol-defs.svg#icon-link"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
