--- a/portfolio.html
+++ b/portfolio.html
@@ -266,14 +266,71 @@
     <!-----------------------------------FOOTER---------------------->
 
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="header-logo link"
-          >Web<span class="footer-logo-web">Studio</span>
-        </a>
-        <p class="footer-page">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-first-block">
+          <a href="./index.html" class="header-logo link"
+            >Web<span class="footer-logo-web">Studio</span>
+          </a>
+          <p class="footer-page">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="footer-second-block">
+          <p class="footer-text">Social media</p>
+          <ul class="ul-footer-soc">
+            <li class="li-footer-box">
+              <a
+                class="footer-soc-link"
+                href=""
+                aria-label="insta"
+                target="_blank"
+                rel="noopener no-referrer"
+              >
+                <svg class="footer-soc-icon" width="40" height="40">
+                  <use href="./images/symbol-defs.svg#icon-Insta"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="li-footer-box">
+              <a
+                class="li-footer-box"
+                href=""
+                aria-label="twitter"
+                target="_blank"
+                rel="noopener no-referrer"
+                ><svg class="team-soc-icon" width="40" height="40">
+                  <use href="./images/symbol-defs.svg#icon-tweet"></use></svg
+              ></a>
+            </li>
+
+            <li class="li-footer-box">
+              <a
+                class="li-footer-box"
+                href=""
+                aria-label="facebook"
+                target="_blank"
+                rel="noopener no-referrer"
+                ><svg class="team-soc-icon" width="40" height="40">
+                  <use href="./images/symbol-defs.svg#icon-faceb"></use></svg
+              ></a>
+            </li>
+
+            <li class="li-footer-box">
+              <a
+                class="li-footer-box"
+                href=""
+                aria-label="in"
+                target="_blank"
+                rel="noopener no-referrer"
+                ><svg class="team-soc-icon" width="40" height="40">
+                  <use href="./images/symbol-defs.svg#icon-link"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
