--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
           </a>
           <ul class="header-menu list">
             <li class="header-menu-item">
-              <a href="./index.html" class="header-menu-link link">Studio</a>
+              <a href="./index.html" class="header-menu-link link current"
+                >Studio</a
+              >
             </li>
             <li class="header-menu-item">
               <a href="./portfolio.html" class="header-menu-link link"
@@ -85,6 +87,11 @@
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="list-section-two list">
             <li class="list-benef">
+              <div class="benefits-box">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="benefits">Strategy</h3>
               <p class="benefits-p">
                 Our goal is to identify the business problem to walk away with
@@ -92,6 +99,11 @@
               </p>
             </li>
             <li class="list-benef">
+              <div class="benefits-box">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="benefits">Punctuality</h3>
               <p class="benefits-p">
                 Bring the key message to the brand's audience for the best price
@@ -99,6 +111,11 @@
               </p>
             </li>
             <li class="list-benef">
+              <div class="benefits-box">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="benefits">Diligence</h3>
               <p class="benefits-p">
                 Research and confirm brands that present the strongest digital
@@ -106,6 +123,11 @@
               </p>
             </li>
             <li class="list-benef">
+              <div class="benefits-box">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="benefits">Technologies</h3>
               <p class="benefits-p">
                 Design practice focused on digital experiences. We bring forth a
@@ -435,6 +457,15 @@
                 </ul>
               </div>
             </li>
+          </ul>
+        </div>
+      </section>
+
+      <!----------------------------LAST SECT------------------------------------------>
+      <section class="">
+        <div class="container">
+          <ul class="">
+            <li class=""></li>
           </ul>
         </div>
       </section>
