--- a/index.html
+++ b/index.html
@@ -462,10 +462,86 @@
       </section>
 
       <!----------------------------LAST SECT------------------------------------------>
-      <section class="">
+      <section class="customers">
         <div class="container">
-          <ul class="">
-            <li class=""></li>
+          <ul class="customers-box-ul">
+            <li class="customers-box-li">
+              <a
+                class="customers-link"
+                href=""
+                aria-label="in"
+                target="_blank"
+                rel="noopener no-referrer"
+                ><svg class="customers-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo-one"></use></svg
+              ></a>
+            </li>
+
+            <li class="customers-box-li">
+              <a
+                class="customers-link"
+                href=""
+                aria-label="in"
+                target="_blank"
+                rel="noopener no-referrer"
+                ><svg class="customers-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo-two"></use></svg
+              ></a>
+            </li>
+
+            <li class="customers-box-li">
+              <a
+                class="customers-link"
+                href=""
+                aria-label="in"
+                target="_blank"
+                rel="noopener no-referrer"
+                ><svg class="customers-icon" width="104" height="56">
+                  <use
+                    href="./images/symbol-defs.svg#icon-Logo-three"
+                  ></use></svg
+              ></a>
+            </li>
+
+            <li class="customers-box-li">
+              <a
+                class="customers-link"
+                href=""
+                aria-label="in"
+                target="_blank"
+                rel="noopener no-referrer"
+                ><svg class="customers-icon" width="104" height="56">
+                  <use
+                    href="./images/symbol-defs.svg#icon-Logo-four"
+                  ></use></svg
+              ></a>
+            </li>
+
+            <li class="customers-box-li">
+              <a
+                class="customers-link"
+                href=""
+                aria-label="in"
+                target="_blank"
+                rel="noopener no-referrer"
+                ><svg class="customers-icon" width="104" height="56">
+                  <use
+                    href="./images/symbol-defs.svg#icon-Logo-five"
+                  ></use></svg
+              ></a>
+            </li>
+
+            <li class="customers-box-li">
+              <a
+                class="customers-link"
+                href=""
+                aria-label="in"
+                target="_blank"
+                rel="noopener no-referrer"
+                ><svg class="customers-icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo-six"></use></svg
+              ></a>
+            </li>
           </ul>
         </div>
       </section>
