New Update 04 HW

--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="team-soc-icon" width="40" height="40">
-                        <use href="./images/symbol-defs.svg#icon-Insta"></use>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Insta"></use>
                       </svg>
                     </a>
                   </li>
@@ -210,10 +210,8 @@
                       aria-label="twitter"
                       target="_blank"
                       rel="noopener no-referrer"
-                      ><svg class="team-soc-icon" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-tweet"
-                        ></use></svg
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-tweet"></use></svg
                     ></a>
                   </li>
 
@@ -224,10 +222,8 @@
                       aria-label="facebook"
                       target="_blank"
                       rel="noopener no-referrer"
-                      ><svg class="team-soc-icon" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-faceb"
-                        ></use></svg
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-faceb"></use></svg
                     ></a>
                   </li>
 
@@ -238,10 +234,8 @@
                       aria-label="in"
                       target="_blank"
                       rel="noopener no-referrer"
-                      ><svg class="team-soc-icon" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-link"
-                        ></use></svg
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-link"></use></svg
                     ></a>
                   </li>
                 </ul>
@@ -267,8 +261,8 @@
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="team-soc-icon" width="40" height="40">
-                        <use href="./images/symbol-defs.svg#icon-Insta"></use>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Insta"></use>
                       </svg>
                     </a>
                   </li>
@@ -280,10 +274,8 @@
                       aria-label="twitter"
                       target="_blank"
                       rel="noopener no-referrer"
-                      ><svg class="team-soc-icon" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-tweet"
-                        ></use></svg
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-tweet"></use></svg
                     ></a>
                   </li>
 
@@ -294,10 +286,8 @@
                       aria-label="facebook"
                       target="_blank"
                       rel="noopener no-referrer"
-                      ><svg class="team-soc-icon" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-faceb"
-                        ></use></svg
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-faceb"></use></svg
                     ></a>
                   </li>
 
@@ -308,10 +298,8 @@
                       aria-label="in"
                       target="_blank"
                       rel="noopener no-referrer"
-                      ><svg class="team-soc-icon" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-link"
-                        ></use></svg
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-link"></use></svg
                     ></a>
                   </li>
                 </ul>
@@ -337,8 +325,8 @@
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="team-soc-icon" width="40" height="40">
-                        <use href="./images/symbol-defs.svg#icon-Insta"></use>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Insta"></use>
                       </svg>
                     </a>
                   </li>
@@ -350,10 +338,8 @@
                       aria-label="twitter"
                       target="_blank"
                       rel="noopener no-referrer"
-                      ><svg class="team-soc-icon" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-tweet"
-                        ></use></svg
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-tweet"></use></svg
                     ></a>
                   </li>
 
@@ -364,10 +350,8 @@
                       aria-label="facebook"
                       target="_blank"
                       rel="noopener no-referrer"
-                      ><svg class="team-soc-icon" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-faceb"
-                        ></use></svg
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-faceb"></use></svg
                     ></a>
                   </li>
 
@@ -378,10 +362,8 @@
                       aria-label="in"
                       target="_blank"
                       rel="noopener no-referrer"
-                      ><svg class="team-soc-icon" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-link"
-                        ></use></svg
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-link"></use></svg
                     ></a>
                   </li>
                 </ul>
@@ -407,8 +389,8 @@
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="team-soc-icon" width="40" height="40">
-                        <use href="./images/symbol-defs.svg#icon-Insta"></use>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Insta"></use>
                       </svg>
                     </a>
                   </li>
@@ -420,10 +402,8 @@
                       aria-label="twitter"
                       target="_blank"
                       rel="noopener no-referrer"
-                      ><svg class="team-soc-icon" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-tweet"
-                        ></use></svg
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-tweet"></use></svg
                     ></a>
                   </li>
 
@@ -434,10 +414,8 @@
                       aria-label="facebook"
                       target="_blank"
                       rel="noopener no-referrer"
-                      ><svg class="team-soc-icon" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-faceb"
-                        ></use></svg
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-faceb"></use></svg
                     ></a>
                   </li>
 
@@ -448,10 +426,8 @@
                       aria-label="in"
                       target="_blank"
                       rel="noopener no-referrer"
-                      ><svg class="team-soc-icon" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-link"
-                        ></use></svg
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-link"></use></svg
                     ></a>
                   </li>
                 </ul>
@@ -464,6 +440,7 @@
       <!----------------------------LAST SECT------------------------------------------>
       <section class="customers">
         <div class="container">
+          <h2 class="last-title">Customers</h2>
           <ul class="customers-box-ul">
             <li class="customers-box-li">
               <a
@@ -473,7 +450,7 @@
                 target="_blank"
                 rel="noopener no-referrer"
                 ><svg class="customers-icon" width="104" height="56">
-                  <use href="./images/symbol-defs.svg#icon-Logo-one"></use></svg
+                  <use href="./images/icons.svg#icon-Logo-one"></use></svg
               ></a>
             </li>
 
@@ -485,7 +462,7 @@
                 target="_blank"
                 rel="noopener no-referrer"
                 ><svg class="customers-icon" width="104" height="56">
-                  <use href="./images/symbol-defs.svg#icon-Logo-two"></use></svg
+                  <use href="./images/icons.svg#icon-Logo-two"></use></svg
               ></a>
             </li>
 
@@ -497,9 +474,7 @@
                 target="_blank"
                 rel="noopener no-referrer"
                 ><svg class="customers-icon" width="104" height="56">
-                  <use
-                    href="./images/symbol-defs.svg#icon-Logo-three"
-                  ></use></svg
+                  <use href="./images/icons.svg#icon-Logo-three"></use></svg
               ></a>
             </li>
 
@@ -511,9 +486,7 @@
                 target="_blank"
                 rel="noopener no-referrer"
                 ><svg class="customers-icon" width="104" height="56">
-                  <use
-                    href="./images/symbol-defs.svg#icon-Logo-four"
-                  ></use></svg
+                  <use href="./images/icons.svg#icon-Logo-four"></use></svg
               ></a>
             </li>
 
@@ -525,9 +498,7 @@
                 target="_blank"
                 rel="noopener no-referrer"
                 ><svg class="customers-icon" width="104" height="56">
-                  <use
-                    href="./images/symbol-defs.svg#icon-Logo-five"
-                  ></use></svg
+                  <use href="./images/icons.svg#icon-Logo-five"></use></svg
               ></a>
             </li>
 
@@ -539,7 +510,7 @@
                 target="_blank"
                 rel="noopener no-referrer"
                 ><svg class="customers-icon" width="104" height="56">
-                  <use href="./images/symbol-defs.svg#icon-Logo-six"></use></svg
+                  <use href="./images/icons.svg#icon-Logo-six"></use></svg
               ></a>
             </li>
           </ul>
@@ -572,45 +543,45 @@
                 target="_blank"
                 rel="noopener no-referrer"
               >
-                <svg class="footer-soc-icon" width="40" height="40">
-                  <use href="./images/symbol-defs.svg#icon-Insta"></use>
+                <svg class="footer-soc-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-Insta"></use>
                 </svg>
               </a>
             </li>
 
             <li class="li-footer-box">
               <a
-                class="li-footer-box"
+                class="footer-soc-link"
                 href=""
                 aria-label="twitter"
                 target="_blank"
                 rel="noopener no-referrer"
-                ><svg class="team-soc-icon" width="40" height="40">
-                  <use href="./images/symbol-defs.svg#icon-tweet"></use></svg
+                ><svg class="team-soc-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-tweet"></use></svg
               ></a>
             </li>
 
             <li class="li-footer-box">
               <a
-                class="li-footer-box"
+                class="footer-soc-link"
                 href=""
                 aria-label="facebook"
                 target="_blank"
                 rel="noopener no-referrer"
-                ><svg class="team-soc-icon" width="40" height="40">
-                  <use href="./images/symbol-defs.svg#icon-faceb"></use></svg
+                ><svg class="team-soc-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-faceb"></use></svg
               ></a>
             </li>
 
             <li class="li-footer-box">
               <a
-                class="li-footer-box"
+                class="footer-soc-link"
                 href=""
                 aria-label="in"
                 target="_blank"
                 rel="noopener no-referrer"
-                ><svg class="team-soc-icon" width="40" height="40">
-                  <use href="./images/symbol-defs.svg#icon-link"></use></svg
+                ><svg class="team-soc-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-link"></use></svg
               ></a>
             </li>
           </ul>
