--- a/portfolio.html
+++ b/portfolio.html
@@ -288,45 +288,45 @@
                 target="_blank"
                 rel="noopener no-referrer"
               >
-                <svg class="footer-soc-icon" width="40" height="40">
-                  <use href="./images/symbol-defs.svg#icon-Insta"></use>
+                <svg class="footer-soc-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-Insta"></use>
                 </svg>
               </a>
             </li>
 
             <li class="li-footer-box">
               <a
-                class="li-footer-box"
+                class="footer-soc-link"
                 href=""
                 aria-label="twitter"
                 target="_blank"
                 rel="noopener no-referrer"
-                ><svg class="team-soc-icon" width="40" height="40">
-                  <use href="./images/symbol-defs.svg#icon-tweet"></use></svg
+                ><svg class="team-soc-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-tweet"></use></svg
               ></a>
             </li>
 
             <li class="li-footer-box">
               <a
-                class="li-footer-box"
+                class="footer-soc-link"
                 href=""
                 aria-label="facebook"
                 target="_blank"
                 rel="noopener no-referrer"
-                ><svg class="team-soc-icon" width="40" height="40">
-                  <use href="./images/symbol-defs.svg#icon-faceb"></use></svg
+                ><svg class="team-soc-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-faceb"></use></svg
               ></a>
             </li>
 
             <li class="li-footer-box">
               <a
-                class="li-footer-box"
+                class="footer-soc-link"
                 href=""
                 aria-label="in"
                 target="_blank"
                 rel="noopener no-referrer"
-                ><svg class="team-soc-icon" width="40" height="40">
-                  <use href="./images/symbol-defs.svg#icon-link"></use></svg
+                ><svg class="team-soc-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-link"></use></svg
               ></a>
             </li>
           </ul>
