--- a/portfolio.html
+++ b/portfolio.html
@@ -101,6 +101,7 @@
           <ul class="portf-pictures list">
             <li class="portf-pics-item">
               <a href="" class="block-photos-one link">
+               <div class="overlay-class">
                 <img
                   src="./images/2ndPage1.jpg"
                   alt="Banking App"
@@ -114,6 +115,14 @@
                   <p class="portf-paragraf">App</p>
                 </div>
               </a>
+              <div class="products-cover-block">
+                <p class="products-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App Cashless Payment Marketing
+                </p>
+              </div>
+              </div>
             </li>
 
             <!------------------------------the second pic-------------------------->
