--- a/index.html
+++ b/index.html
@@ -588,5 +588,9 @@
         </div>
       </div>
     </footer>
+
+    <!--------------------------MODALWINDOW---------------------->
+
+    <div class="backdrop"></div>
   </body>
 </html>
